--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,6 +3,15 @@ api:
     type:     "api"
     prefix:   "/api"
 
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
+
 NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix:   "/doc"
