--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "nelmio/cors-bundle": "~1.4",
         "nelmio/api-doc-bundle": "~2.9@dev",
         "friendsofsymfony/http-cache-bundle": "~1.0",
-        "friendsofsymfony/user-bundle": "^1.3"
+        "friendsofsymfony/user-bundle": "^1.3",
+        "sonata-project/admin-bundle": "2.3.*",
+        "sonata-project/doctrine-orm-admin-bundle": "^2.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
