--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -38,3 +38,4 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/post_user, role: IS_AUTHENTICATED_ANONYMOUSLY }
