--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,12 +14,12 @@ parameters:
     mailer_user:       ~
     mailer_password:   ~
 
-    locale:            en
+    locale:            fr
 
-    cors_allow_origin: http://localhost
+    cors_allow_origin: *
 
-    api_name:          Your API name
-    api_description:   The full description of your API
+    api_name:          BeerHunter
+    api_description:   BeerHunter
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
