--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "psr-4": { "": "src/", "SymfonyStandard\\": "app/" }
     },
     "require": {
-        "php": "~7.0.0RC7",
+        "php": ">=5.4",
         "symfony/symfony": "~2.7",
         "doctrine/orm": "~2.2,>=2.2.3,<2.5",
         "doctrine/dbal": "<2.5",
