--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,6 +7,16 @@ api:
     type:     "api"
     prefix:   "/api"
 
+NelmioApiDocBundle:
+    resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
+    prefix:   "/doc"
+
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+api_login_check:
+    path: /api/login_check
+
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
     prefix: /admin
@@ -15,10 +25,3 @@ _sonata_admin:
     resource: .
     type: sonata_admin
     prefix: /admin
-
-NelmioApiDocBundle:
-    resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
-    prefix:   "/doc"
-
-fos_user:
-    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
