--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "friendsofsymfony/http-cache-bundle": "~1.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "sonata-project/admin-bundle": "2.3.*",
-        "sonata-project/doctrine-orm-admin-bundle": "^2.3"
+        "sonata-project/doctrine-orm-admin-bundle": "^2.3",
+        "lexik/jwt-authentication-bundle": "^1.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
