--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,7 +70,7 @@ nelmio_cors:
     defaults:
         allow_origin:  ["%cors_allow_origin%"]
         allow_methods: ["POST", "PUT", "GET", "DELETE", "OPTIONS"]
-        allow_headers: ["content-type", "authorization"]
+        allow_headers: ['*']
         max_age:       3600
     paths:
         '^/': ~
