--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -34,9 +34,16 @@ services:
         arguments: [ "AppBundle\\Entity\\Hunt" ]
         tags:      [ { name: "api.resource" } ]
 
+    resource.hunter.search_filter:
+        parent:    "api.doctrine.orm.search_filter"
+        arguments: [ { username: "exact" } ]
+
     resource.hunter:
         parent:    "api.resource"
         arguments: [ "AppBundle\\Entity\\Hunter" ]
+        calls:
+            -      method:    "initFilters"
+                   arguments: [ [ "@resource.hunter.search_filter" ] ]
         tags:      [ { name: "api.resource" } ]
 
     resource.trophy:
