--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,6 +41,8 @@ doctrine:
         user:     "%database_user%"
         password: "%database_password%"
         charset:  UTF8
+        types:
+            json: Sonata\Doctrine\Types\JsonType
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
         #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
@@ -86,20 +88,62 @@ nelmio_api_doc:
             formats:
                 json:       "application/json"
 
-#FOS User
+# FOS User
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: AppBundle\Entity\Hunter
 
-#Sonata block
+    group:
+        group_class:   Application\Sonata\UserBundle\Entity\Group
+        group_manager: sonata.user.orm.group_manager
+
+    service:
+        user_manager: sonata.user.orm.user_manager
+
+# Sonata User
+sonata_user:
+    security_acl: true
+    manager_type: orm
+    class:
+        user:       AppBundle\Entity\Hunter
+    admin:
+        user:
+          class:    AppBundle\Admin\HunterAdmin
+
+# Sonata Admin
+sonata_admin:
+    title: BeerHunter
+    title_logo: /img/Cible-bière.png
+
+    dashboard:
+        groups:
+            BeerHunter:
+                items:
+                    - admin.address
+                    - admin.bar
+                    - admin.beer
+                    - admin.city
+                    - admin.color
+                    - admin.country
+                    - admin.hunt
+                    - admin.trophy
+                    - admin.trophyhunter
+                    - admin.vote
+                    - sonata.user.admin.user
+
+# Sonata block
 sonata_block:
     default_contexts: [cms]
     blocks:
         # enable the SonataAdminBundle block
         sonata.admin.block.admin_list:
             contexts:   [admin]
+        sonata.user.block.menu:
+        sonata.user.block.account:
+        sonata.block.service.text:
 
+# JWT
 lexik_jwt_authentication:
     private_key_path: %jwt_private_key_path%
     public_key_path:  %jwt_public_key_path%
